# shotpaste

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: gen_icons.rs
src/: clipboard.rs  config.rs  installer.rs  main.rs  notify.rs  single_instance.rs  tray.rs  watcher.rs  windows_shortcut.rs
src/installer/: linux.rs  macos.rs  mod.rs  windows.rs
